--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,12 @@
 name = "ILog2"
-uuid = "13fe3c7e-effe-11e8-1179-379e43bc5f24"
+# Following uuid is mysteriously wrong. It seems to have
+# been accepted as correct in the past.
+#uuid = "13fe3c7e-effe-11e8-1179-379e43bc5f24"
+# Looked up the following uuid in the registry.
+# Lets see if it works
+uuid = "2cd5bd5f-40a1-5050-9e10-fc8cdb6109f5"
 authors = ["John Lapeyre <jlapeyre@users.noreply.github.com>"]
-version = "0.2.2"
+version = "0.2.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
