--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,4 @@
 name = "ILog2"
-# Following uuid is mysteriously wrong. It seems to have
-# been accepted as correct in the past.
-#uuid = "13fe3c7e-effe-11e8-1179-379e43bc5f24"
-# Looked up the following uuid in the registry.
-# Lets see if it works
 uuid = "2cd5bd5f-40a1-5050-9e10-fc8cdb6109f5"
 authors = ["John Lapeyre <jlapeyre@users.noreply.github.com>"]
 version = "0.2.4"
@@ -12,7 +7,9 @@ version = "0.2.4"
 julia = "1"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Aqua", "JET"]
