--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,16 +18,18 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.0'
+          - '1.0' # oldest supported release
+          - '1.6' # LTS
+          - '1' # stable release
           - 'nightly'
         os:
           - ubuntu-latest
-          - mac-OS-latest
+          - macOS-latest
           - windows-latest    
         arch:
           - x64
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
@@ -36,6 +38,6 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v1
+      - uses: codecov/codecov-action@v3
         with:
           files: lcov.info
