--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,9 @@ jobs:
         arch:
           - x64
           - x86
+        exclude:
+          - os: macOS-latest
+          - arch: x86
     steps:
       - uses: actions/checkout@v3
       - uses: julia-actions/setup-julia@v1
