--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,7 +21,7 @@ jobs:
           - '1.0' # oldest supported release
           - '1.6' # LTS
           - '1' # stable release
-          - 'nightly'
+#          - 'nightly' # nightly is incompatible with JET, probably
         os:
           - ubuntu-latest
           - macOS-latest
@@ -42,6 +42,8 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
         with:
           files: lcov.info
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: false
